--- a/src/Componentes/moleculas/Hero/Hero.css
+++ b/src/Componentes/moleculas/Hero/Hero.css
@@ -91,5 +91,9 @@
 .seccion2-button{
     display: flex;
     gap: 20px;
-    align-items: center
+    align-items: center;
+   
+}
+.seccion2-button h3{
+    font-weight: 700;
 }
