--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
+@import 'bootstrap/dist/css/bootstrap.min.css'; 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
-
-:root {
+ :root {
   /* tipografias */
   --tipog1: 'Playfair Display';
   --tipog2: 'Noto Serif';
@@ -13,6 +13,9 @@
  --colorparrafos: #000000;
  --colorparrafo2: #434141;
  --colorfondofinal:#EAECF0;
+ --colorcategorias: #EEEDEC;
+ --colortipogr:#717171;
+ --colorListaCateg: #292D32;
  
 }
 .aviso-desktop {
@@ -70,3 +73,4 @@
  box-sizing: border-box;  /*hace respetar el tamaño*/
 
 }
+
