--- a/src/Componentes/moleculas/navbar/navbar.css
+++ b/src/Componentes/moleculas/navbar/navbar.css
@@ -60,7 +60,7 @@ margin: 13px;
   top: 0;
   left: 0;
   width: 75%;
-  height: 100vh;
+  height: 100%;
   background-color: var(--color2);
   overflow-y: auto;
   transform: translateX(-100%);
@@ -102,15 +102,7 @@ height: 70%;
   
   padding: 0;
 }
-/* .categorias-items {
- 
-  width: 80%;
-  /* min-height:70px; */
-  /* height: auto;
-  margin: 10px;
-border-bottom: 1px solid black; */
- 
-/* }  */
+
 .accordion-item{
   border: none;
   border-radius: 0px;
@@ -118,25 +110,7 @@ border-bottom: 1px solid black; */
   margin: 7px;
   
 }
-/* .categorias-items h3{
-    text-align: initial;
-    margin: 0;
-    display: flex;
-   justify-content: space-between
 
-    
-} */
-/* .categorias-items ul {
-  max-height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.3s ease;
-}
-
-.categorias-items.open ul {
-  max-height: 500px; /* suficiente para mostrar el contenido */
-  /* opacity: 1; */
-/* }  */
 .lista-acordeon-ul{
 padding: 0;
 }
@@ -169,4 +143,94 @@ padding: 0;
   background-image: url("../../Atomos/img/plus.svg");
   color: var(--colorListaCateg);
 
+}
+/* Carrito */
+.carrito-contenedorGeneral{
+  position: fixed;
+  height: 100%;
+  width: 90%;
+  /* border: 1px solid black; */
+  right: 0;
+  top: 0;
+  background-color:white ;
+  overflow-y: auto;
+  transform: translateX(100%);
+  transition: transform 0.3s ease;
+  z-index: 999;
+}
+.carrito-contenedorGeneral.open {
+  transform: translateX(0);
+  
+}
+
+
+
+.carrito-encabezado{
+  height: 110px;
+  display: flex;
+  align-items: flex-end;
+justify-content: space-between;
+background-color: var(--colorcategorias);
+}
+.carrito-encabezado h3{
+  justify-content: center;
+  margin: 20px;
+  font-family: var(--tipog3);
+  color: var(--colortipogr);
+
+}
+.carrito-encabezado img{
+  margin: 20px;
+}
+
+.carrito-table-body-bottons{
+  display: flex;
+  
+}
+.conteiner-imagen{
+  width: 0;
+}
+
+.producto-nombre{
+  margin-bottom: 2px;
+  font-family: var(--tipog3);
+ 
+}
+.producto-precio{
+  font-weight: 700;
+}
+.carrito-table-body-bottons{
+  margin-top: 15px;
+}
+.carrito-table-body-button{
+  margin-right: 10px;
+  height: 30px;
+  width: 30px;
+  border: 1px solid grey;
+}
+.carrito-table-body-bottons p{
+  margin-right: 10px;
+  
+  width: 10px;
+}
+.carrito-table-body-button-eliminar{
+  height: 30px;
+  width: 30px;
+  border: 1px solid grey;
+  margin: 10px;
+  padding: 0; /* muy importante */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; /* corta lo que sobresalga */
+ 
+}
+.boton-eliminar{
+  vertical-align: bottom;   /* alinea el contenido abajo */
+  text-align: center; 
+ 
+}
+.carrito-table-body-button-eliminar img{
+   width: 20px;
+   height: 20px;
 }
