--- a/src/Componentes/moleculas/navbar/navbar.css
+++ b/src/Componentes/moleculas/navbar/navbar.css
@@ -1,60 +1,51 @@
- 
-
-.contenedor{
-    display: grid;
-    /* border: 1px solid black; */
-    font-family: var(--tipog1);
-   grid-template-columns: 1fr auto 1fr;
-    position: fixed;
-    background-color: white;
-    width: 100%;
-    box-sizing: border-box;
-   align-items: center;
-   padding: 15px;
-   height: 110px;
-   box-shadow: 0 0 10px;
-   z-index: 3;
+.contenedor {
+  display: grid;
+  /* border: 1px solid black; */
+  font-family: var(--tipog1);
+  grid-template-columns: 1fr auto 1fr;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  box-sizing: border-box;
+  align-items: center;
+  padding: 15px;
+  height: 110px;
+  box-shadow: 0 0 10px;
+  z-index: 3;
 }
-.contenedor.blur{
+.contenedor.blur {
   opacity: 0.5;
 }
 
-.iconos-princ{
-
-    justify-self: start;
-  >img {
+.iconos-princ {
+  justify-self: start;
+  > img {
     margin: 13px;
   }
 }
 
-.marca-titulo{
- 
-   /* justify-self: center; */
-   align-items: center;
-   font-size: 40px;
+.marca-titulo {
+  /* justify-self: center; */
+  align-items: center;
+  font-size: 40px;
   margin: 0;
   font-weight: 700;
-
-  
 }
-.iconos-sec{
-
+.iconos-sec {
   justify-self: end;
 }
 
-.icono-usuario{
-justify-self: end;
+.icono-usuario {
+  justify-self: end;
 
-margin: 13px;
+  margin: 13px;
 }
-.icono-cart{
+.icono-cart {
   width: 20px;
   height: 20px;
   margin: 13px;
-  color:gray
-
+  color: gray;
 }
-
 
 /* menu Categorias  */
 .categorias-contenedor {
@@ -71,7 +62,6 @@ margin: 13px;
 }
 .categorias-contenedor.open {
   transform: translateX(0);
-  
 }
 
 .categorias-contenedor.closed {
@@ -97,64 +87,58 @@ margin: 13px;
   margin: 10px;
 }
 .categoria-contenido-categorias {
-    margin: 15px;
+  margin: 15px;
   display: grid;
   grid-template-columns: 1fr;
-height: 70%;
-  
+  height: 70%;
+
   padding: 0;
 }
 
-.accordion-item{
+.accordion-item {
   border: none;
   border-radius: 0px;
   border-bottom: 1px solid black;
   margin: 7px;
-  
 }
 
-.lista-acordeon-ul{
-padding: 0;
+.lista-acordeon-ul {
+  padding: 0;
 }
-.lista-acordeon-li{
+.lista-acordeon-li {
   list-style: none;
   font-family: var(--tipog3);
- 
 }
-.lista-acordeon-li button{
+.lista-acordeon-li button {
   width: 100%;
- border:1px solid grey;
- height: 40px;
- margin: 3px;
- 
+  border: 1px solid grey;
+  height: 40px;
+  margin: 3px;
 }
-.accordion-button{
-  background-color:var(--color2);
+.accordion-button {
+  background-color: var(--color2);
   padding: 0px 5px 40px 5px;
   height: 70px;
   font-family: var(--tipog3);
   color: var(--colorListaCateg);
   font-size: 14px;
- 
-
 }
-.accordion-button:not(.collapsed){
+.accordion-button:not(.collapsed) {
   background: var(--color2);
 }
-.accordion-button::after{
-  background-image: url("../../Atomos/img/plus.svg");
+.accordion-button::after {
+  background-image: url('../../Atomos/img/plus.svg');
   color: var(--colorListaCateg);
-
 }
 /* Carrito */
-.carrito-contenedorGeneral{
+.carrito-contenedorGeneral {
   position: fixed;
   height: 100%;
   width: 90%;
   /* border: 1px solid black; */
   right: 0;
   top: 0;
-  background-color:white ;
+  background-color: white;
   overflow-y: auto;
   transform: translateX(100%);
   transition: transform 0.3s ease;
@@ -162,77 +146,109 @@ padding: 0;
 }
 .carrito-contenedorGeneral.open {
   transform: translateX(0);
-  
 }
 
-
-
-.carrito-encabezado{
+.carrito-encabezado {
   height: 110px;
   display: flex;
   align-items: flex-end;
-justify-content: space-between;
-background-color: var(--colorcategorias);
+  justify-content: space-between;
+  background-color: var(--colorcategorias);
 }
-.carrito-encabezado h3{
+.carrito-encabezado h3 {
   justify-content: center;
   margin: 20px;
   font-family: var(--tipog3);
   color: var(--colortipogr);
-
 }
-.carrito-encabezado img{
+.carrito-encabezado img {
   margin: 20px;
 }
 
-.carrito-table-body-bottons{
+.carrito-table-body-bottons {
   display: flex;
-  
 }
-.conteiner-imagen{
+.conteiner-imagen {
   width: 0;
 }
 
-.producto-nombre{
+.producto-nombre {
   margin-bottom: 2px;
   font-family: var(--tipog3);
- 
 }
-.producto-precio{
+.producto-precio {
   font-weight: 700;
 }
-.carrito-table-body-bottons{
+.carrito-table-body-bottons {
   margin-top: 15px;
 }
-.carrito-table-body-button{
+.carrito-table-body-button {
   margin-right: 10px;
   height: 30px;
   width: 30px;
   border: 1px solid grey;
 }
-.carrito-table-body-bottons p{
+.carrito-table-body-bottons p {
   margin-right: 10px;
-  
+
   width: 10px;
 }
-.carrito-table-body-button-eliminar{
+.carrito-table-body-button-eliminar {
   height: 30px;
   width: 30px;
   border: 1px solid grey;
   margin: 10px;
-  padding: 0; /* muy importante */
-  display: flex;
+  padding: 0;
   align-items: center;
   justify-content: center;
-  overflow: hidden; /* corta lo que sobresalga */
- 
+  overflow: hidden;
 }
-.boton-eliminar{
-  vertical-align: bottom;   /* alinea el contenido abajo */
-  text-align: center; 
- 
+.boton-eliminar {
+  vertical-align: bottom;
+  text-align: center;
 }
-.carrito-table-body-button-eliminar img{
-   width: 20px;
-   height: 20px;
+.carrito-table-body-button-eliminar img {
+  width: 20px;
+  height: 20px;
+}
+
+/* total subtotal Carrito */
+
+.carrito-total-subtotal-finalizar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.carrito-subtotal {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.carrito-total {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.carrito-subtotal p {
+  font-size: 14px;
+}
+.carrito-total p{
+  font-size: 20px;
+}
+.carrito-buttons {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+  gap: 8px;
+}
+.seguirCom {
+  height: 40px;
+  border: 1px solid black;
+  background-color: transparent;
+}
+.finalizar{
+  height: 40px;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
 }
