--- a/src/Componentes/moleculas/navbar/navbar.css
+++ b/src/Componentes/moleculas/navbar/navbar.css
@@ -133,7 +133,7 @@
 /* Carrito */
 .carrito-contenedorGeneral {
   position: fixed;
-  height: 100%;
+  height: 100vh;
   width: 90%;
   /* border: 1px solid black; */
   right: 0;
@@ -218,6 +218,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: fixed;
+  bottom: 20px;
+ 
 }
 .carrito-subtotal {
   display: flex;
