--- a/src/Componentes/moleculas/Card/Card.css
+++ b/src/Componentes/moleculas/Card/Card.css
@@ -1,20 +1,29 @@
 .card-contenedorgeneral{
-   z-index: 1;
-   position: relative;
+   
+    display: flex;
+    flex-direction: column;
+    height: 280px;
+}
+.carousel{
+    width: 100%;
+   
+    height: 200px;
+}
+.card-img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 .card-conjunto-texto{
     display: flex;
     flex-direction: column;
-    height: 80px;
-    overflow: hidden;
 }
 .card-nombre{
-    margin: 10px 0  10px 5px;
-    overflow: hidden;
-    font-size: 12px;
-
+    margin: 5px 0 10px 10px;
+    font-size: 15px;
 }
 .card-precio{
-     margin: 0px 0  10px 5px;
-      font-size: 13px;
+    margin: 5px 0 10px 10px;
+    font-size: 18px;
+    font-weight: 700;
 }
