supabase conectado y carga de productos

--- a/src/Componentes/Productos/Productos.css
+++ b/src/Componentes/Productos/Productos.css
@@ -36,3 +36,13 @@
   gap: 15px;
   
 }
+
+
+/*  */
+
+/* .contenedor{
+  margin-top: 150px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+} */
