--- a/src/Componentes/Productos/Productos.css
+++ b/src/Componentes/Productos/Productos.css
@@ -7,7 +7,7 @@
   align-items: center;
 }
 .productos-titulo h3 {
-  font-size: 45px;
+  font-size: 37px;
 }
 .productos-titulo p {
   font-size: 10px;
@@ -21,7 +21,7 @@
   margin: 30px;
 }
 .productos-filtro-boton {
-  width: 100%;
+  width: 300px;
   border: 1px solid rgb(12, 12, 12);
   height: auto;
   padding: 15px;
